2/27/2006 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/tgdb.c (is_tgdb_finished): Added.
	(tgdb_process): Set is_finished parameter.

2/27/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/commands.c (sys/types.h, regex.h): Added defines.
	(struct commands): Remove field_5_newline_hit.
	(parse_breakpoint): Modify comment, and completly re-write function.
	(commands_set_state): Check parse_breakpoint return value.
	(commands_set_field_num): Remove use of field_5_newline_hit.
	(commands_process): Ditto. Do not add newlines for breakpoint info.

2/27/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/commands.c: Format comments.

2/27/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/commands.c: Indent.

version 0.6.0 (01/30/2006):

1/30/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/annotate.c (handle_exited): Fix compile error.
	* annotate-two/src/commands.c 
        (commands_send_source_absolute_source_file): Ditto.
        * tgdb-base/src/tgdb.c (tgdb_process_console_command): Ditto.

1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.in: Ditto.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.in: Ditto.

12/30/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/driver.c (gdb_input): Update to new TGDB interface.
	* tgdb-base/src/tgdb.c (tgdb_process): Add new parameter.
	* tgdb-base/include/tgdb.h (tgdb_process): Add new parameter.

12/30/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/annotate.c (handle_unwanted_fields): Added function.
	(annotations): Add new entry.

12/25/2005 Bob Rossi <bob@brasko.net>
